[gd_scene load_steps=15 format=3 uid="uid://rpp7hq7jajiy"]

[ext_resource type="PackedScene" uid="uid://ch3xs1d1lu117" path="res://objects/modules/cgc/base_rooms/golfcourse_fairway.tscn" id="1_wgrec"]
[ext_resource type="PackedScene" uid="uid://b3p8q3fhmuo35" path="res://objects/props/cgc/resizeable_hedge_cube.tscn" id="2_a6ih3"]
[ext_resource type="Script" uid="uid://h0b48xrci8d6" path="res://objects/modules/cgc/variants/cgc_fence_gate.gd" id="3_rq37w"]
[ext_resource type="PackedScene" uid="uid://5m1a0suouie8" path="res://objects/props/cgc/fence_with_end.tscn" id="4_ysap5"]
[ext_resource type="PackedScene" uid="uid://bwu5l3d7uncro" path="res://objects/props/cgc/hedge_pillar_spiked.tscn" id="5_4i0my"]
[ext_resource type="Script" uid="uid://dyt7mhhg2lwrv" path="res://objects/interactables/mole_stomp/mole_stomp.gd" id="6_hp252"]
[ext_resource type="PackedScene" uid="uid://pn7r3ut085aw" path="res://objects/props/cgc/hedge_pillar.tscn" id="6_wbdd7"]
[ext_resource type="PackedScene" uid="uid://direah3lbjuu5" path="res://objects/battle/battle_node/battle_node.tscn" id="8_kcvi5"]
[ext_resource type="PackedScene" uid="uid://dflwjcy6fj0av" path="res://objects/cog/cog.tscn" id="9_1ainf"]
[ext_resource type="PackedScene" uid="uid://dcovg7c53hvck" path="res://objects/props/cgc/cgc_flat_branch.tscn" id="10_nb760"]
[ext_resource type="PackedScene" uid="uid://dxyq5lb5oineo" path="res://objects/interactables/treasure_chest/treasure_chest.tscn" id="12_w5tms"]
[ext_resource type="Resource" uid="uid://j75am6rbrvrj" path="res://objects/items/pools/progressives.tres" id="13_1ygb8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1wtw3"]
size = Vector3(8.71588, 9.69043, 3.41797)

[sub_resource type="BoxShape3D" id="BoxShape3D_fjmd3"]
size = Vector3(17.9937, 8.14648, 8.6799)

[node name="fairway" instance=ExtResource("1_wgrec")]

[node name="ENTRANCE" parent="." index="26"]
transform = Transform3D(-4.37114e-10, 0, 0.01, 0, 0.01, 0, -0.01, 0, -4.37114e-10, -31.2462, 0, -0.0306853)

[node name="Props" type="Node3D" parent="." index="29"]

[node name="Hedges" type="Node3D" parent="Props" index="0"]

[node name="ResizeableHedgeCube" parent="Props/Hedges" index="0" instance=ExtResource("2_a6ih3")]
transform = Transform3D(1, 0, 0, 0, 2, 0, 0, 0, 1, -22.4898, 0, -20.036)
size = Vector2(14, 5.835)

[node name="ResizeableHedgeCube2" parent="Props/Hedges" index="1" instance=ExtResource("2_a6ih3")]
transform = Transform3D(1, 0, 0, 0, 2, 0, 0, 0, 1, -22.4898, 0, 19.73)
size = Vector2(14, 5.835)

[node name="FenceGate" type="Node3D" parent="Props" index="1" node_paths=PackedStringArray("left_pivot", "right_pivot", "fence_cam")]
transform = Transform3D(0.258819, 0, -0.965926, 0, 1, 0, 0.965926, 0, 0.258819, -13.9463, 0, 0.0390844)
script = ExtResource("3_rq37w")
left_pivot = NodePath("leftpivot")
right_pivot = NodePath("rightpivot")
fence_cam = NodePath("FenceCam")

[node name="rightpivot" type="Node3D" parent="Props/FenceGate" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.69078, 0, 1.64899)

[node name="fence" parent="Props/FenceGate/rightpivot" index="0" instance=ExtResource("4_ysap5")]
transform = Transform3D(0.188196, 0, 0.603016, 0, 0.65, 0, -0.622159, 0, 0.182406, -2.14315, 0, -0.63177)

[node name="leftpivot" type="Node3D" parent="Props/FenceGate" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.01855, 0, -1.28507)

[node name="fence2" parent="Props/FenceGate/leftpivot" index="0" instance=ExtResource("4_ysap5")]
transform = Transform3D(-0.188196, 0, -0.603016, 0, 0.65, 0, 0.622159, 0, -0.182406, 2.2051, 0, 0.674932)

[node name="FenceCam" type="Camera3D" parent="Props/FenceGate" index="2"]
transform = Transform3D(0.574877, 0, -0.81824, 0, 1, 0, 0.81824, 0, 0.574877, -7.61444, 2.66901, 4.38047)
fov = 50.0

[node name="PillarSpiked" parent="Props/FenceGate" index="3" instance=ExtResource("5_4i0my")]
transform = Transform3D(0.957168, 0, -0.289533, 0, 1, 0, 0.289533, 0, 0.957168, 5.8539, 0, 2.02803)

[node name="PillarSpiked2" parent="Props/FenceGate" index="4" instance=ExtResource("5_4i0my")]
transform = Transform3D(0.957168, 0, -0.289533, 0, 1, 0, 0.289533, 0, 0.957168, -6.11954, 0, -1.5938)

[node name="Pillars" type="Node3D" parent="Props" index="2"]

[node name="PillarSpiked" parent="Props/Pillars" index="0" instance=ExtResource("5_4i0my")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -14.3384, 0, 15.5148)

[node name="PillarSpiked3" parent="Props/Pillars" index="1" instance=ExtResource("5_4i0my")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.810802, 0, 6.36319)

[node name="PillarSpiked4" parent="Props/Pillars" index="2" instance=ExtResource("5_4i0my")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.810802, 0, -6.13634)

[node name="PillarSpiked5" parent="Props/Pillars" index="3" instance=ExtResource("5_4i0my")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 15.7289, 0, 6.14939)

[node name="PillarSpiked6" parent="Props/Pillars" index="4" instance=ExtResource("5_4i0my")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 15.7289, 0, -6.13634)

[node name="PillarSpiked7" parent="Props/Pillars" index="5" instance=ExtResource("5_4i0my")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 15.7289, 0, -23.6532)

[node name="PillarSpiked8" parent="Props/Pillars" index="6" instance=ExtResource("5_4i0my")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 15.7289, 0, 22.8632)

[node name="PillarSpiked2" parent="Props/Pillars" index="7" instance=ExtResource("5_4i0my")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -14.3384, 0, -15.7612)

[node name="Fences" type="Node3D" parent="Props" index="3"]

[node name="fence" parent="Props/Fences" index="0" instance=ExtResource("4_ysap5")]
transform = Transform3D(-0.5, 0, -4.37114e-08, 0, 0.5, 0, 4.37114e-08, 0, -0.5, -14.5554, 0, 9.26115)

[node name="fence2" parent="Props/Fences" index="1" instance=ExtResource("4_ysap5")]
transform = Transform3D(-0.5, 0, -4.37114e-08, 0, 0.5, 0, 4.37114e-08, 0, -0.5, -14.5554, 0, 13.2612)

[node name="fence5" parent="Props/Fences" index="2" instance=ExtResource("4_ysap5")]
transform = Transform3D(-2.18557e-08, 0, 0.5, 0, 0.5, 0, -0.5, 0, -2.18557e-08, -2.21334, 0, 6.33518)

[node name="fence6" parent="Props/Fences" index="3" instance=ExtResource("4_ysap5")]
transform = Transform3D(-2.18557e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -2.18557e-08, -11.3357, 0, 6.33518)

[node name="fence7" parent="Props/Fences" index="4" instance=ExtResource("4_ysap5")]
transform = Transform3D(-2.18557e-08, 0, 0.5, 0, 0.5, 0, -0.5, 0, -2.18557e-08, -2.21334, 0, -6.16435)

[node name="fence8" parent="Props/Fences" index="5" instance=ExtResource("4_ysap5")]
transform = Transform3D(-2.18557e-08, 0, -0.5, 0, 0.5, 0, 0.5, 0, -2.18557e-08, -11.3357, 0, -6.16435)

[node name="fence9" parent="Props/Fences" index="6" instance=ExtResource("4_ysap5")]
transform = Transform3D(-0.5, 0, -4.37114e-08, 0, 0.5, 0, 4.37114e-08, 0, -0.5, 15.8056, 0, -20.6233)

[node name="fence10" parent="Props/Fences" index="7" instance=ExtResource("4_ysap5")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 15.8056, 0, -9.23962)

[node name="fence11" parent="Props/Fences" index="8" instance=ExtResource("4_ysap5")]
transform = Transform3D(0.5, 0, 8.74228e-08, 0, 0.5, 0, -8.74228e-08, 0, 0.5, 15.8056, 0, 19.8018)

[node name="fence12" parent="Props/Fences" index="9" instance=ExtResource("4_ysap5")]
transform = Transform3D(-0.5, 0, -4.37114e-08, 0, 0.5, 0, 4.37114e-08, 0, -0.5, 15.8056, 0, 9.27124)

[node name="fence3" parent="Props/Fences" index="10" instance=ExtResource("4_ysap5")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -14.5554, 0, -9.26591)

[node name="fence4" parent="Props/Fences" index="11" instance=ExtResource("4_ysap5")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -14.5554, 0, -13.2659)

[node name="HedgePillar" parent="Props" index="4" instance=ExtResource("6_wbdd7")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 7.91024, 0, -2.69507)

[node name="HedgePillar2" parent="Props" index="5" instance=ExtResource("6_wbdd7")]
transform = Transform3D(1.15, 0, 0, 0, 1.15, 0, 0, 0, 1.15, 30.138, 0, 20.9233)

[node name="HedgePillar3" parent="Props" index="6" instance=ExtResource("6_wbdd7")]
transform = Transform3D(1.15, 0, 0, 0, 1.15, 0, 0, 0, 1.15, 29.2044, 0, -25.7001)

[node name="MoleStompGame" type="Area3D" parent="." index="30" node_paths=PackedStringArray("launch_cam")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -17.0677, 0, -13.5613)
script = ExtResource("6_hp252")
difficulty = 1.4
grid_size = Vector2i(10, 5)
game_time = 50.0
launch_cam = NodePath("../LaunchCam")

[node name="CollisionShape3D" type="CollisionShape3D" parent="MoleStompGame" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.4617, 4.34521, 15.1786)
shape = SubResource("BoxShape3D_1wtw3")

[node name="LaunchCam" type="Camera3D" parent="." index="31"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -23.1343, 0, 0)

[node name="BattleNode" parent="." index="32" node_paths=PackedStringArray("cogs") instance=ExtResource("8_kcvi5")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 8.01618, 0, -14.8264)
cogs = [NodePath("Cog"), NodePath("Cog2"), NodePath("Cog3")]

[node name="Cog" parent="BattleNode" index="3" instance=ExtResource("9_1ainf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.52705, 0, 0)

[node name="Cog2" parent="BattleNode" index="4" instance=ExtResource("9_1ainf")]

[node name="Cog3" parent="BattleNode" index="5" instance=ExtResource("9_1ainf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.51352, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="BattleNode" index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.709717, 3.57324, -1.1848)
shape = SubResource("BoxShape3D_fjmd3")

[node name="BattleNode2" parent="." index="33" node_paths=PackedStringArray("cogs") instance=ExtResource("8_kcvi5")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 8.01618, 0, 14.5578)
cogs = [NodePath("Cog"), NodePath("Cog2"), NodePath("Cog3")]

[node name="Cog" parent="BattleNode2" index="3" instance=ExtResource("9_1ainf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.52705, 0, 0)

[node name="Cog2" parent="BattleNode2" index="4" instance=ExtResource("9_1ainf")]

[node name="Cog3" parent="BattleNode2" index="5" instance=ExtResource("9_1ainf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.51352, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="BattleNode2" index="6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.709717, 3.57324, -1.1848)
shape = SubResource("BoxShape3D_fjmd3")

[node name="Branches" type="Node3D" parent="." index="34"]

[node name="CGCFlatBranch" parent="Branches" index="0" instance=ExtResource("10_nb760")]
transform = Transform3D(2.1, 0, 0, 0, 2.78, 0, 0, 0, 2.78, -29.1481, 0, -15.9565)

[node name="CGCFlatBranch2" parent="Branches" index="1" instance=ExtResource("10_nb760")]
transform = Transform3D(1.965, 0, 0, 0, 2.67, 0, 0, 0, 2.78, -19.7527, 0, -15.9565)

[node name="CGCFlatBranch7" parent="Branches" index="2" instance=ExtResource("10_nb760")]
transform = Transform3D(-8.58929e-08, 0, 2.78, 0, 2.67, 0, -1.965, 0, -1.21518e-07, -12.7024, 0, -20.2303)

[node name="CGCFlatBranch8" parent="Branches" index="3" instance=ExtResource("10_nb760")]
transform = Transform3D(-8.58929e-08, 0, 2.78, 0, 2.67, 0, -1.965, 0, -1.21518e-07, -12.6989, 0, 20.2798)

[node name="CGCFlatBranch3" parent="Branches" index="4" instance=ExtResource("10_nb760")]
transform = Transform3D(1.965, 0, 0, 0, 3.045, 0, 0, 0, 2.78, -24.3454, 0, -15.9565)

[node name="CGCFlatBranch4" parent="Branches" index="5" instance=ExtResource("10_nb760")]
transform = Transform3D(-2.1, 0, 2.43035e-07, 0, 2.78, 0, -1.83588e-07, 0, -2.78, -18.8002, 0, 15.6536)

[node name="CGCFlatBranch5" parent="Branches" index="6" instance=ExtResource("10_nb760")]
transform = Transform3D(-1.965, 0, 2.43035e-07, 0, 2.67, 0, -1.71786e-07, 0, -2.78, -28.1957, 0, 15.6536)

[node name="CGCFlatBranch6" parent="Branches" index="7" instance=ExtResource("10_nb760")]
transform = Transform3D(-1.965, 0, 2.43035e-07, 0, 3.045, 0, -1.71786e-07, 0, -2.78, -23.6029, 0, 15.6536)

[node name="treasure_chest" parent="." index="35" instance=ExtResource("12_w5tms")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 16.7097, 0, 0)
item_pool = ExtResource("13_1ygb8")

[connection signal="s_normal_finished" from="MoleStompGame" to="Props/FenceGate" method="open"]
